test/corpus/tags.txt
================================================================================
Tag with the name only
================================================================================

%p

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)))

================================================================================
Tag with the class name only
================================================================================

.article

--------------------------------------------------------------------------------

(source_file
  (tag
    (class
      (class_name))))

================================================================================
Tag with ID only
================================================================================

#some-id

--------------------------------------------------------------------------------

(source_file
  (tag
    (id)))

================================================================================
Tag with name and ID
================================================================================

%p#some-id

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (id)))

================================================================================
Tag with name, ID and class
================================================================================

%p#some-id.article

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (id)
    (class
      (class_name))))

================================================================================
Tag with ID, class and name
================================================================================

#some-id.article%p

--------------------------------------------------------------------------------

(source_file
  (tag
    (id)
    (class
      (class_name))
    (tag_name)))

================================================================================
Tag with name and HTML-style attributes
================================================================================

%html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en")

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (html_attributes
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))))

================================================================================
Tag with text
================================================================================

%p Hello

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (verbatim_string)))

================================================================================
Tag with nested text
================================================================================

%p
  Hello

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (verbatim_string)))

================================================================================
Tag with nested Ruby output block
================================================================================

%p
  = @variable

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (ruby_block_output
      (ruby_code))))

================================================================================
Tag with nested Ruby evaluate block
================================================================================

%p
  - if true
    %div Hello

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (ruby_block_run
      (ruby_code)
      (tag
        (tag_name)
        (verbatim_string)))))

================================================================================
Unescaping HTML
================================================================================

= "I feel <strong>!"
!= "I feel <strong>!"
%foo

--------------------------------------------------------------------------------

(source_file
  (ruby_block_output
    (ruby_code))
  (ruby_block_output_nuke
    (ruby_code))
  (tag
    (tag_name)))

================================================================================
Attribute hashes that are stretched over multiple lines
================================================================================

%script{
  "type": "text/javascript",
  "src": "javascripts/script_#{2 + 7}",
  "data": {
    "controller": "reporter",
  },
}

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (ruby_attributes
        (ruby_attribute_hash)))))

================================================================================
HTML-like attributes that are stretched over multiple lines
================================================================================

%script(type="text/javascript"
        src="javascripts/script_#{2 + 7}_fix")

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (html_attributes
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)
            (ruby_interpolation
              (ruby_expression))
            (attribute_value)))))))

================================================================================
HTML-like attributes with ruby value references
================================================================================

%input(foo=lvar bar=$gvar baz=@ivar waz=@@cvar lol=CONSTANT)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (html_attributes
        (attribute
          (attribute_name)
          (ruby_value_ref
            (ruby_local_variable)))
        (attribute
          (attribute_name)
          (ruby_value_ref
            (ruby_global_variable)))
        (attribute
          (attribute_name)
          (ruby_value_ref
            (ruby_instance_variable)))
        (attribute
          (attribute_name)
          (ruby_value_ref
            (ruby_class_variable)))
        (attribute
          (attribute_name)
          (ruby_value_ref
            (ruby_constant)))))))

================================================================================
Tag with outer whitespace removal
================================================================================

%blockquote>
  %div
    Foo!

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (nuke_outer_whitespace)
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Tag with inner whitespace removal
================================================================================

%blockquote<
  %div
    Foo!

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (nuke_inner_whitespace)
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Tag with whitespace control and self-closing
================================================================================

%img>/

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (nuke_outer_whitespace)
    (self_close_slash)))

================================================================================
Tag with attributes and whitespace control
================================================================================

%p{class: "test"}<
  Content

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (attributes
      (ruby_attributes))
    (nuke_inner_whitespace)
    (verbatim_string)))

================================================================================
Tag with object reference
================================================================================

%div[@user]

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (object_reference
      (ruby_instance_variable))))

================================================================================
Tag with object reference and prefix
================================================================================

%div[@article, :profile]

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (object_reference
      (ruby_instance_variable)
      (object_prefix))))

================================================================================
Implicit div with object reference
================================================================================

.post[@post]

--------------------------------------------------------------------------------

(source_file
  (tag
    (class
      (class_name))
    (object_reference
      (ruby_instance_variable))))

================================================================================
Tag with object reference and attributes
================================================================================

%div[@user]{class: "special"}

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (object_reference
      (ruby_instance_variable))
    (attributes
      (ruby_attributes))))
